chore: get release things set up (#84)
closes #12
